#################################################################
# EXTEND WRAPPERS EXAMPLE
#################################################################

FILE(GLOB EXTEND_WRAPPERS_EXAMPLE_SRC *.f90 *.F90)
SET(EXTEND_WRAPPERS_EXAMPLE_SRC ${EXTEND_WRAPPERS_EXAMPLE_SRC} PARENT_SCOPE)

SET(EXE_NAME ParameterList_Extend_Wrappers_Example)
ADD_EXECUTABLE(${EXE_NAME} ${EXTEND_WRAPPERS_EXAMPLE_SRC})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${LIB})
FOREACH (EXT_LIB ${EXT_LIBS})
    IF(DEFINED ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${EXT_LIB}_FOUND)
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${${EXT_LIB}_LIBRARIES})
    ENDIF()
ENDFOREACH()

ADD_TEST(${EXE_NAME}_TEST ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
